--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-100 text-gray-900">
     <div class="bg-white p-6 rounded-2xl shadow-2xl text-center max-w-sm w-full">
         <!-- Kamera -->
-        <div class="relative w-64 mx-auto border-4 border-gray-800 rounded-lg shadow-lg overflow-hidden">
+        <div class="relative w-64 mx-auto shadow-lg overflow-hidden">
             <video id="video" autoplay class="w-full"></video>
         </div>
 
